--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,7 +2,6 @@
 html
 	head
 		title SSE test
+		script(src="/static/js/lib/jquery-1.10.2.min.js")
 	body
-		block body
-
-		script(src="/static/app.js")
+		block body	
