--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,5 +3,6 @@ html
 	head
 		title SSE test
 		script(src="/static/js/lib/jquery-1.10.2.min.js")
+		script(src="/static/js/lib/eventsource.polyfill.js")
 	body
 		block body	
